--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>Productivine — Boostez votre productivité</title>
 
-        <!-- Performance: préconnexion à Google Fonts -->
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <!-- Inter (Google Fonts) -->
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+            <!-- Performance: préconnexion à Google Fonts -->
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <!-- Roboto (recommandée, conventionnelle) -->
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
         <!-- Styles -->
         <link rel="stylesheet" href="styles.css">
