Add theme toggle, palette selector and persistence; theme variables

--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
                     <li role="none"><a role="menuitem" href="#contact">Contact</a></li>
                     <li role="none" class="cta"><a class="btn btn-primary" href="#signup">Essayer gratuitement</a></li>
                 </ul>
+        
+                        <!-- Theme controls -->
+                        <div class="theme-controls" aria-hidden="false">
+                            <label for="theme-toggle" class="visually-hidden">Changer le thème</label>
+                            <button id="theme-toggle" class="btn" aria-pressed="false" title="Basculer thème">🌙</button>
+
+                            <label for="palette-select" class="visually-hidden">Choisir une palette</label>
+                            <select id="palette-select" aria-label="Choisir une palette">
+                                <option value="default">Palette par défaut</option>
+                                <option value="warm">Palette chaude</option>
+                                <option value="forest">Palette forêt</option>
+                            </select>
+                        </div>
             </nav>
         </div>
     </header>
