--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="site-header" role="banner">
         <div class="container header-inner">
             <a href="#hero" class="logo" aria-label="Productivine — page d'accueil">
-                <strong>Productivine</strong>
+                <strong>okokokok</strong>
             </a>
 
             <nav class="nav" role="navigation" aria-label="Navigation principale">
