--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="dorian.html">
+        <a href="ines.html">
             <div class="profile-container">
         
                 <div class="profile-img">
