feat: ajouter photo de profil de ines

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="profile-container">
 
              <div class="profile-img">
-                 <img src="" alt="Profile Image">
+                 <img src="assets/ines.jpg.png" alt="Profile Image">
 
             </div>
              <div class="profile-details">
