Update and rename index.html to Emma.html
Les préférences de Emmanuel. Il aime le plat d'okok,la musique afro, fait partis du GPEA.

--- a/Emma.html
+++ b/Emma.html
@@ -21,9 +21,14 @@
         
             </div>
         </a>
-        <a href="sample.html">
-            <div class="profile-container">
-        
+        <a href="emma.html">
+            <div class="emmanuel michel">
+    <h3>Emmanuel</h3>
+    <p>⚽ Sport: Football</p>
+    <p>🍽️ Plat: Okok</p>
+    <p>🎵 Musique: Afro</p>
+    <p>🏫 École: GPEA</p>
+</div> 
                 <div class="profile-img">
                     <img src="assets/tupac.jpeg" alt="Profile Image">
                 </div>
