Add new image asset mj.jpg to the project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                    <img id="profilePic" src="https://i.pravatar.cc/150?img=3" alt="Photo de profil">
                 </div>
                 <div class="profile-details">
-                    <p>Vanessa</p>
+                    <p>Ines</p>
                 </div>
         
         
